2002-11-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Conditional.pm [SYNOPSIS]: Fix not's description.
	* lib/Automake/ConditionalSet.pm (sub_conditions): New function.
	(multiply): Also accept an Automake::Conditional as argument.
	* automake.in (variable_not_always_defined_in_cond): Simplify,
	using only Automake::ConditionalSet methods.
	Suggested by Raja R Harinath.

	* lib/Automake/ConditionalSet.pm (conds): Use value() to simplify.
	(invert): Rewrite as a product-of-sums to sum-of-products converter.
	(_multiply, multiply): New functions.
	* lib/Automake/Conditional.pm (not): New function.
	* lib/Automake/tests/ConditionalSet.pl (test_invert): Update.
	* automake.in (condition_negate): Move ...
	* lib/Automake/Conditional.pm (negate_condition): ... here.
	Suggested by Raja R Harinath.

2002-11-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/ConditionalSet.pm (_simplify, simplify): New methods.
	(true): Cache return value, so _simplify can use it.
	* lib/Automake/tests/ConditionalSet.pl (test_simplify): New function.
	* automake.in (variable_not_always_defined_in_cond): Return
	a simplified ConditionalSet.
	(macro_define, require_variables): Adjust.
	* tests/Makefile.am (TEST): Add library3.test.
	* tests/library3.test: New file.
	* tests/pluseq9.test: Adjust.
	Thanks to Raja R Harinath.

2002-11-18  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/tests/Makefile.am, lib/Automake/tests/Conditional.pl,
	lib/Automake/tests/ConditionalSet.pl: New files.
	* lib/Automake/Makefile.am (SUBDIRS): New variable.
	* configure.in: Output lib/Automake/tests/Makefile.
	* lib/Automake/ConditionalSet.pm (by_conditions): Delete.
	(conds): Don't use by_conditions, sort alphabetically, and
	return sorted conds.
	(string): Call ->string on each Conditional.
	* tests/Makefile.am (TESTS): Remove cond12.test.
	* tests/cond12.test: Remove, moved to
	lib/Automake/tests/ConditionalSet.pl.
	* tests/cond3.test: Adjust conditional ordering.
