@@ -39,5 +39,5 @@ EOF
 $ACLOCAL
 $AUTOMAKE 2>stderr && exit 1
 cat stderr
-grep USE_FOO_TRUE stderr && exit 1
-grep USE_FOO_FALSE stderr
+grep ' USE_FOO' stderr && exit 1
+grep '!USE_FOO' stderr
