@@ -54,6 +54,6 @@ END
 $ACLOCAL
 $AUTOMAKE 2>stderr && exit 1
 cat stderr
-grep '^Makefile.am:.*:   A_FALSE C_FALSE D_FALSE$' stderr
+grep '^Makefile.am:.*:   !A and !C and !D$' stderr
 # Is there only one missing condition?
 test `grep ':  ' stderr | wc -l` = 1 || exit 1
