@@ -40,12 +40,12 @@ cat stderr # for debugging
 #
 # Makefile.am:4: Cannot apply `+=' because `INCLUDES' is not defined in
 # Makefile.am:4: the following conditions:
-# Makefile.am:4:   CHECK_FALSE
+# Makefile.am:4:   !CHECK
 # Makefile.am:4: Either define `INCLUDES' in these conditions, or use
 # Makefile.am:4: `+=' in the same conditions as the definitions.
 
-# Is CHECK_FALSE mentioned?
-grep ':.*CHECK_FALSE$' stderr || exit 1
+# Is !CHECK mentioned?
+grep ':.*!CHECK$' stderr || exit 1
 # Is there only one missing condition?
 test `grep ':  ' stderr | wc -l` = 1 || exit 1
 
@@ -59,5 +59,5 @@ echo 'AUTOMAKE_OPTIONS = -Wno-obsolete' >> Makefile.am
 $AUTOMAKE 2>stderr && exit 1
 cat stderr
 grep AM_CPPFLAGS stderr && exit 1
-# CHECK_FALSE should still be mentioned.
-grep ':.*CHECK_FALSE$' stderr || exit 1
+# !CHECK should still be mentioned.
+grep ':.*!CHECK$' stderr || exit 1
