@@ -61,7 +61,7 @@ cat stderr # for debugging
 #
 # Makefile.am:19: Cannot apply `+=' because `B' is not defined in
 # Makefile.am:19: the following conditions:
-# Makefile.am:19:   COND1_FALSE COND3_FALSE
+# Makefile.am:19:   !COND1 and !COND3
 # Makefile.am:19: Either define `B' in these conditions, or use
 # Makefile.am:19: `+=' in the same conditions as the definitions.
 #
@@ -69,7 +69,7 @@ cat stderr # for debugging
 # COND1_FALSE (merging the last two conditions), so we'll support
 # this case in the check too.
 
-grep ':   COND1_FALSE COND3_FALSE$' stderr || exit 1
+grep ':   !COND1 and !COND3$' stderr || exit 1
 # Make sure there is exactly one missing condition.
 test `grep ':  ' stderr | wc -l` = 1 || exit 1
 
