@@ -1,5 +1,14 @@
 2002-11-20  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (conditional_ambiguous_p, macro_define, rule_define,
+	require_variables): Use ->human instead of ->string.
+	* lib/Automake/Conditional.pm (string): Don't sort conditions, they
+	are already sorted.
+	(_to_human, human): New functions.
+	* lib/Automake/ConditionalSet.pm (human): New function.
+	* tests/cond27.test, tests/library3.test, tests/pluseq5.test,
+	tests/pluseq9.test: Adjust.
+
 	* lib/Automake/Conditional.pm [SYNOPSIS]: Fix not's description.
 	* lib/Automake/ConditionalSet.pm (sub_conditions): New function.
 	(multiply): Also accept an Automake::Conditional as argument.
